--- a/Copy_of_LinguisticsProject.ipynb
+++ b/Copy_of_LinguisticsProject.ipynb
@@ -23,6 +23,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Readability of the Works of Charles Dickens and Nathaniel Hawthorne**\n",
+        "\n",
+        "### **by: Travis Gubbe**"
+      ],
+      "metadata": {
+        "id": "eJFCl0WkhGRZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Below is the code for my college Linguistics Project investigating the readibility of the works of authors Charles Dickens and Nathaniel Hawthorne.\n",
+        "\n",
+        "For more information, I have saved my paper detailing my findings in the PythonLinguisticsProject repository."
+      ],
+      "metadata": {
+        "id": "Ta2KDKlIhk10"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "4c555s_BELI4",
@@ -121,6 +143,15 @@
           "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Exploratory Analysis**"
+      ],
+      "metadata": {
+        "id": "P_5ee3GYhxmQ"
+      }
     },
     {
       "cell_type": "code",
@@ -621,7 +652,7 @@
         "id": "nCSgs3jyUAX4"
       },
       "source": [
-        "CFD Plot of Word length frequency in the Dickens Texts"
+        "## **CFD Plot of Word length frequency in the Dickens Texts**"
       ]
     },
     {
@@ -783,7 +814,7 @@
         "id": "Vq1USZze0zJ4"
       },
       "source": [
-        "**Automated Readability Index (ARI)**\n"
+        "## **Automated Readability Index (ARI)**\n"
       ]
     },
     {
@@ -899,7 +930,7 @@
         "id": "lFHgxqyO6IZA"
       },
       "source": [
-        "**CL (Coleman-Liau Index)**"
+        "## **CL (Coleman-Liau Index)**"
       ]
     },
     {
@@ -1147,7 +1178,7 @@
         "id": "-TAyC6HIWewf"
       },
       "source": [
-        "**FK (Flesh-Kincaid)**"
+        "## **FK (Flesh-Kincaid)**"
       ]
     },
     {
@@ -1337,7 +1368,7 @@
         "id": "Sweuf8gz6MPF"
       },
       "source": [
-        "**Type Token Ratio**"
+        "## **Type Token Ratio**"
       ]
     },
     {
@@ -1464,7 +1495,7 @@
         "id": "28Yf5Tvk1U4K"
       },
       "source": [
-        "**Bigrams**"
+        "## **Bigrams**"
       ]
     },
     {
@@ -1711,7 +1742,7 @@
         "id": "j7LawwUp0kOe"
       },
       "source": [
-        "**Bar Plots**"
+        "## **Bar Plots**"
       ]
     },
     {
